<resources>
    <string name="app_name">Birthday Reminder</string>
    <string name="action_add_new">Add New</string>
    <string name="action_settings">Settings</string>
    <string name="action_web">Web</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="web_url">https://github.com/antandbuffalo/BirthdayReminderV2</string>

    <!--for testing-->
<!--    <string name="ad_addnew">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_main">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_modifytoday">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_notificationsetting">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_sendwish">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_update">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_wishtemplate">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_share_wish">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_about">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_notificationtime">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_notificationfrequency">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_settings">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_backup">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_account_setup">ca-app-pub-3940256099942544/6300978111</string>-->

    <!--Actual initial account-->
<!--    <string name="ad_addnew">ca-app-pub-7116389331562728/6247898368</string>-->
<!--    <string name="ad_main">ca-app-pub-7116389331562728/5603727070</string>-->
<!--    <string name="ad_modifytoday">ca-app-pub-7116389331562728/3862160178</string>-->
<!--    <string name="ad_notificationsetting">ca-app-pub-7116389331562728/1110313255</string>-->
<!--    <string name="ad_sendwish">ca-app-pub-7116389331562728/2886429354</string>-->
<!--    <string name="ad_update">ca-app-pub-7116389331562728/2531206139</string>-->
<!--    <string name="ad_wishtemplate">ca-app-pub-7116389331562728/4391082719</string>-->
<!--    <string name="ad_share_wish">ca-app-pub-7116389331562728/3988631148</string>-->
<!--    <string name="ad_about">ca-app-pub-7116389331562728/4955417829</string>-->
<!--    <string name="ad_notificationtime">ca-app-pub-7116389331562728/2215332125</string>-->
<!--    <string name="ad_notificationfrequency">ca-app-pub-7116389331562728/4230766154</string>-->
<!--    <string name="ad_settings">ca-app-pub-7116389331562728/2067178109</string>-->
<!--    <string name="ad_backup">ca-app-pub-7116389331562728/8441014762</string>-->
<!--    <string name="ad_account_setup">ca-app-pub-7116389331562728/8249443071</string>-->

<!--    another account-->
        <string name="ad_addnew">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_main">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_modifytoday">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_notificationsetting">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_sendwish">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_update">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_wishtemplate">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_share_wish">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_about">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_notificationtime">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_notificationfrequency">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_settings">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_backup">ca-app-pub-2477570555850305/3395272768</string>
        <string name="ad_account_setup">ca-app-pub-2477570555850305/3395272768</string>

</resources>
