<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.antandbuffalo.birthdayreminder.MainActivity">
    <item
        android:id="@+id/action_add_new"
        android:orderInCategory="100"
        android:title="@string/action_add_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_web"
        android:orderInCategory="100"
        android:title="@string/action_web"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="About"
        app:showAsAction="never" />
</menu>
