<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.antandbuffalo.birthdayreminder.about.About">

    <!--    https://github.com/JetradarMobile/android-snowfall-->
    <com.jetradarmobile.snowfall.SnowfallView
        android:id="@+id/snowFlakes"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:snowflakeAlphaMax="255"
        app:snowflakeAlphaMin="150"
        app:snowflakeAngleMax="5"
        app:snowflakeImage="@drawable/ic_snow_flakes"
        app:snowflakeSizeMax="32dp"
        app:snowflakeSizeMin="8dp"
        app:snowflakeSpeedMax="12"
        app:snowflakeSpeedMin="4"
        app:snowflakesAlreadyFalling="false"
        app:snowflakesFadingEnabled="true"
        app:snowflakesNum="250" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo_white_1"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/web_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textIsSelectable="true"
        android:text="@string/web_url"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\u00A9 Ant and Buffalo"
        android:id="@+id/textView4"
        android:textColor="#ffffff"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 1.0.0"
        android:id="@+id/version"
        android:layout_below="@+id/textView3"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#00ffffff"
        android:text="Contact Us"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share"
        android:id="@+id/share"
        android:textColor="#ffffff"
        android:background="#00ffffff"
        android:layout_above="@+id/contactUs"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#00D33636"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_about"></com.google.android.gms.ads.AdView>

</RelativeLayout>
